# ResEmbed

./: Binary.cpp  Binary.h  CMakeLists.txt  README.md  ResourceEmbedLib.h  main.cpp
.github/workflows/: ci.yml
CMake/: ResEmbed.cmake
Examples/Directory/: main.cpp
Examples/Named/: Main.cpp
Examples/SharedLib/: Lib.cpp
GeneratedCodeTest/: CMakeLists.txt  Main.cpp  Resource.cpp  ResourceData.cpp  ResourceData.h
Generator/: CMakeLists.txt  ResourceGenerator.cpp
Lib/: CMakeLists.txt  ResourceEmbedLib.cpp  ResourceEmbedLib.h
Lib/ResEmbed/: Common.h  Entries.cpp  Entries.h  InternalStorage.cpp  InternalStorage.h  ResEmbed.cpp  ResEmbed.h
Test/: CMakeLists.txt  main.cpp
Test/MoreResources/: data2.txt
Test/Resources/: data2.txt
Tests/: CMakeLists.txt
Tests/BasicUse/: CMakeLists.txt  main.cpp
Tests/GeneratedCodeTest/: CMakeLists.txt  ResourceData.cpp  ResourceData.h
cmake/: ResEmbed.cmake  ResourceEmbed.cmake
