add_library(TestResources STATIC)
embed_resource_directory(TestResources DIRECTORY Resources NAMESPACE BinaryData CATEGORY "Custom")

add_executable(ResourceEmbedderTest main.cpp)
embed_resource_directory(ResourceEmbedderTest DIRECTORY MoreResources)
target_link_libraries(ResourceEmbedderTest PRIVATE TestResources)
